docs: comprehensive documentation modernization and API reference
✨ New Documentation Structure:
- Complete API reference for all packages (@mimic/design-tokens, @mimic/design-system, @mimic/shared-utils)
- Architecture Decision Records (ADRs) documenting key technical choices
- Comprehensive troubleshooting guide for common development issues
- Step-by-step deployment procedures for production
- Documentation index for easy navigation

📚 Package Documentation:
- Individual README files for each package with usage examples
- Design tokens documentation with W3C DTCG standards
- Component library documentation with Storybook integration
- Shared utilities documentation with TypeScript API reference

🎯 Developer Experience:
- Quick start guides and onboarding documentation
- Integration examples and code samples
- Modern markdown formatting with Mermaid diagrams
- Cross-referenced documentation structure

🔧 Additional Improvements:
- VS Code workspace configuration
- Development tooling scripts
- CI/CD workflow templates
- Enhanced project structure

This provides enterprise-grade documentation supporting the project's
design-token-driven development pipeline with excellent DX.

--- a/nx.json
+++ b/nx.json
@@ -16,7 +16,10 @@
       "!{projectRoot}/.storybook/**/*",
       "!{projectRoot}/tsconfig.storybook.json"
     ],
-    "sharedGlobals": []
+    "sharedGlobals": [
+      "{workspaceRoot}/.github/workflows/ci.yml",
+      "{workspaceRoot}/tools/apple-cleaner.js"
+    ]
   },
   "targetDefaults": {
     "@nx/eslint:lint": {
@@ -136,6 +139,7 @@
     }
   ],
   "useInferencePlugins": true,
-  "nxCloudAccessToken": null,
-  "nxCloudId": "6858740ab45da5624a6cdcf8"
+  "nxCloudId": "6858740ab45da5624a6cdcf8",
+  "parallel": 3,
+  "cacheDirectory": "tmp/nx-cache"
 }
