chore: remove obsolete files and update project structure
- Deleted package.json, login-end.html, and login-start.html from the nx-cache/cloud directory as they are no longer needed.
- Updated verify.lock with a new timestamp.
- Modified run.json to change the lint command and updated task details for multiple projects.
- Refactored apple-cleaner.js to use ES module syntax and improved logging.

--- a/.prettierignore
+++ b/.prettierignore
@@ -24,7 +24,18 @@ packages/design-tokens/dist/
 
 # Temporary files
 tmp/
+temp/
+.tmp/
+.temp/
+temporary/
+*.tmp
+*.temp
 .cache/
+*.swp
+*.swo
+*~
+#*#
+.#*
 target/
 
 # Config timestamps
