chore: remove outdated terminal output files and fix linting issues
- Deleted terminal output files from nx-cache to clean up the repository.
- Resolved multiple linting issues across various markdown and TypeScript files.
- Updated markdown files to adhere to line length and code block language specifications.
- Addressed TypeScript version warnings and ensured compatibility with @typescript-eslint.
- Fixed import resolution errors in shared-utils and design-tokens packages.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build:affected": "nx affected -t build",
     "test": "nx run-many -t test",
     "test:affected": "nx affected -t test",
-    "lint": "nx run-many -t lint",
+    "lint:packages": "nx run-many -t lint -p design-tokens,design-system,shared-utils",
+    "lint:workspace": "nx run workspace-format:lint",
     "lint:affected": "nx affected -t lint",
     "lint:css": "stylelint 'packages/**/*.{css,scss,sass}' --fix",
     "lint:md": "markdownlint-cli2 --fix",
