--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,14 @@
+# trunk-ignore-all(checkov/CKV2_GHA_1)
+
 name: 🚀 Release
 
 on:
   push:
     branches: [main]
     paths:
-      - 'packages/**'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
+      - packages/**
+      - package.json
+      - pnpm-lock.yaml
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,7 +30,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'pnpm'
+          cache: pnpm
 
       - name: 📦 Install pnpm
         uses: pnpm/action-setup@v4
