--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -5,22 +5,62 @@
   "description": "Design tokens generated from Penpot using Style Dictionary",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./tokens": {
+      "types": "./dist/types/tokens.ts",
+      "import": "./dist/js/tokens.js"
+    },
+    "./css": "./dist/css/tokens.css",
+    "./scss": "./dist/scss/tokens.scss",
+    "./json": "./dist/json/tokens.json",
+    "./json/flat": "./dist/json/tokens-flat.json"
+  },
   "files": [
-    "dist"
+    "dist",
+    "tokens",
+    "style-dictionary.config.js"
   ],
   "scripts": {
-    "build": "style-dictionary build -c style-dictionary.config.js && tsc",
+    "build": "pnpm run build:tokens && pnpm run build:types",
     "build:tokens": "style-dictionary build -c style-dictionary.config.js",
     "build:types": "tsc",
+    "build:watch": "concurrently \"pnpm run build:tokens --watch\" \"pnpm run build:types --watch\"",
     "clean": "rm -rf dist",
-    "watch": "style-dictionary build -c style-dictionary.config.js --watch"
+    "watch": "pnpm run build:tokens --watch",
+    "test": "vitest",
+    "test:tokens": "node -e \"const tokens = require('./dist/json/tokens.json'); console.log('Tokens loaded successfully:', Object.keys(tokens).length, 'categories');\"",
+    "validate": "node -e \"const { validateTokens } = require('./dist/index.js'); const tokens = require('./tokens/base.json'); const result = validateTokens(tokens); console.log('Validation result:', result);\"",
+    "tokens:export": "cd ../../tools/penpot-export && docker-compose up --build",
+    "tokens:sync": "pnpm run tokens:export && pnpm run build:tokens",
+    "tokens:watch": "pnpm run tokens:sync && pnpm run watch",
+    "tokens:validate": "pnpm run build && pnpm test && pnpm run validate",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "style-dictionary": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
-    "typescript": "^5.8.3"
+    "concurrently": "^9.2.0",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
+  },
+  "keywords": [
+    "design-tokens",
+    "style-dictionary",
+    "css-variables",
+    "design-system",
+    "penpot",
+    "w3c-dtcg"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mimic-org/mimic.git",
+    "directory": "packages/design-tokens"
   },
   "publishConfig": {
     "access": "restricted"
