--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -21,10 +21,13 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   disabled:
-    - markdownlint
+    - markdownlint # Using markdownlint-cli2 instead
+    - checkov # Temporarily disabled for stability
+    - osv-scanner # Temporarily disabled for stability
+    - trufflehog # Temporarily disabled for stability
+    - hadolint # Causing daemon stability issues
   enabled:
-    # Multi-formatter strategy: Biome (Rust-speed JS/TS), Prettier (edge cases), targeted tools
-    # Note: dprint configured separately for MD/TOML/YAML (see dprint.json)
+    # Core formatting and linting (lightweight)
     - eslint@9.29.0:
         config_path: eslint.config.js
     - markdownlint-cli2@0.18.1
@@ -34,17 +37,13 @@ lint:
     - stylelint@16.21.0:
         include: ['**/*.{css,scss,sass}']
 
-    # Documentation & Markdown
+    # Essential tools (lightweight)
     - actionlint@1.7.7
-    - checkov@3.2.443
     - git-diff-check
-    - hadolint@2.12.1-beta
-    - osv-scanner@2.0.3
-    - renovate@41.1.3
     - shellcheck@0.10.0
     - shfmt@3.6.0
-    - trufflehog@3.89.2
     - yamllint@1.37.1
+    - renovate@41.1.3
 
   ignore:
     - linters: [ALL]
@@ -64,6 +63,25 @@ lint:
         - '*.tmp'
         - '**/.vscode/**'
         - '**/.idea/**'
+        # Additional exclusions to reduce load
+        - '**/*.min.js'
+        - '**/*.min.css'
+        - '**/*.bundle.js'
+        - '**/*.chunk.js'
+        - '**/vendor/**'
+        - '**/vendors/**'
+        - '**/.git/**'
+        - '**/logs/**'
+        - '**/*.log'
+        # Nx specific excludes
+        - '**/dist-*/**'
+        - '**/.angular/**'
+        - '**/.next/**'
+        - '**/.nuxt/**'
+        # Package manager files
+        - '**/pnpm-lock.yaml'
+        - '**/package-lock.json'
+        - '**/yarn.lock'
 
     # ADR-specific ignores for markdownlint MD024 (multiple headings with same content)
     - linters: [markdownlint-cli2]
