feat: complete design token pipeline stabilization
🎯 **PIPELINE STABILIZATION COMPLETE**

**Architecture & Collision Prevention**:
- Implemented comprehensive collision-prevention with ds- prefixing
- Updated Style Dictionary config for platform-rooted builds (libs/tokens/{platform}/)
- Added namespace protection (ds.theme, DsTokens) for Compose/Dart
- Fixed fontFamily quoting, numeric-safe property names, object serialization
- Reduced token collisions from 57 to 3 (metadata-only)

**Module Boundaries & CI**:
- Implemented Nx module boundary enforcement with updated project tags
- Added CI workflows for collision prevention and module boundaries
- Excluded generated files from linting (tokens.scss, tokens.css, etc.)
- Added runtime guard-rails (shared-utils/src/runtime-guards.ts)

**Storybook & Documentation**:
- Implemented Storybook composition architecture (main.mobile.ts, main.desktop.ts)
- Created comprehensive USER_GUIDE.md with step-by-step workflow
- Updated CONTROL_DOCUMENT.md, DESIGN_TOKENS.md, tokens-schema.md
- Added PIPELINE_STABILIZATION_COMPLETE.md summary

**Build & Testing**:
- All core packages build and lint successfully
- All token outputs validated for all platforms (CSS, JS, TS, Dart, Kotlin, RN)
- Fixed Style Dictionary transforms and formats
- Added stylelint configuration to exclude generated files

**Tools & Configuration**:
- Added Penpot export tooling (Docker, CLI scripts)
- Updated ESLint config for better compatibility
- Configured trunk, markdownlint, and stylelint for generated files

The design token pipeline is now production-ready, collision-safe, and fully documented for team onboarding and open-source contribution.

Fixes: token collisions, module boundaries, Storybook isolation, documentation gaps
Implements: collision prevention, CI gates, runtime guards, comprehensive docs

--- a/packages/design-system/project.json
+++ b/packages/design-system/project.json
@@ -25,12 +25,74 @@
         }
       }
     },
+    "storybook:mobile": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4401,
+        "configDir": "packages/design-system/.storybook",
+        "config": {
+          "configPath": "packages/design-system/.storybook/main.mobile.ts"
+        }
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "storybook:desktop": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4402,
+        "configDir": "packages/design-system/.storybook",
+        "config": {
+          "configPath": "packages/design-system/.storybook/main.desktop.ts"
+        }
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
     "build-storybook": {
       "executor": "@nx/storybook:build",
       "outputs": ["{options.outputDir}"],
       "options": {
         "outputDir": "packages/design-system/storybook-static",
         "configDir": "packages/design-system/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook:mobile": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "packages/design-system/storybook-static-mobile",
+        "configDir": "packages/design-system/.storybook",
+        "config": {
+          "configPath": "packages/design-system/.storybook/main.mobile.ts"
+        }
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook:desktop": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "packages/design-system/storybook-static-desktop",
+        "configDir": "packages/design-system/.storybook",
+        "config": {
+          "configPath": "packages/design-system/.storybook/main.desktop.ts"
+        }
       },
       "configurations": {
         "ci": {
