--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -56,6 +56,7 @@ globs:
   # Exclude Trunk and tooling files
   - '!**/.trunk/**'
   - '!**/.trunk/plugins/**'
+  - '!**/.husky/**'
 
   # Exclude Apple and system files
   - '!**/._*'
