--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,57 @@
-# Dependencies
+# Dependencies and Package Managers
 node_modules/
 .pnpm-store/
 .pnpm-debug.log*
+.yarn/
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Build outputs
+# Build outputs and compilation artifacts
 dist/
 build/
 lib/
+out/
 *.tsbuildinfo
+*.buildinfo
+*.js.map
+*.d.ts.map
 packages/design-tokens/dist/
+packages/design-tokens/libs/tokens/
+.next/
+.nuxt/
+.vuepress/dist/
+.serverless/
+.parcel-cache/
 
-# Environment variables
+# Environment variables and secrets
 .env
+.env.*
+!.env.example
+!.env.template
 .env.local
 .env.production.local
 .env.test.local
+.env.development.local
+*.pem
+*.key
+*.crt
+secrets.json
 
 # Nx workspace
 .nx/cache
 .nx/workspace-data
+.nx/installation
 
 # Storybook
 storybook-static/
+chromatic-build/
 
 # Testing
 coverage/
@@ -31,12 +61,24 @@ coverage/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+jest-coverage/
+junit.xml
+test-output/
+.vitest/
 
-# IDE
+# IDE and editors
 .vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 .idea/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
+.atom/
+.nova/
 
 # OS files
 .DS_Store
@@ -67,7 +109,8 @@ Temporary Items
 # Icon must end with two \r
 Icon
 
-# Xcode
+
+# Xcode (iOS/macOS development)
 *.xccheckout
 *.xcscmblueprint
 *.xcuserdata
@@ -96,26 +139,25 @@ DerivedData/
 # CocoaPods
 Pods/
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-# Rust/Tauri
-target/
-Cargo.lock
-
-# Mobile
+# Android
 *.keystore
 *.jks
 .gradle/
 .cxx/
 local.properties
+android/app/debug/
+android/app/profile/
+android/app/release/
 
-# Temporary files
+# Logs
+logs
+*.log
+
+# Rust/Tauri
+target/
+Cargo.lock
+
+# Temporary files and caches
 *.tmp
 *.temp
 .cache/
@@ -127,17 +169,55 @@ temporary/
 *~
 #*#
 .#*
+.turbo/
+.vercel/
+.nitro/
 
 # Docker
 .docker/
 
-# Ollama models
+# AI/ML models
 .ollama/
+*.onnx
+*.pkl
+*.h5
+*.pb
 
-# Config timestamps
+# Config timestamps and generated configs
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
+*.timestamp-*
 
-# Generated files
+# Generated files and documentation
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
+auto-generated/
+generated/
+gen/
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+
+# Performance monitoring
+.clinic/
+.0x/
+
+# Capacitor (mobile)
+capacitor.config.json
+ios/App/App/capacitor.config.json
+android/app/src/main/assets/capacitor.config.json
+
+# Expo (React Native)
+.expo/
+expo-env.d.ts
+
+# Metro bundler (React Native)
+.metro-health-check*
+metro.config.*.js
+.react-native/
+
+# Flipper
+flipper-rn-addons.json
