--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -14,6 +14,7 @@ plugins:
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
   enabled:
+    - java@13.0.11
     - go@1.21.0
     - node@22.16.0
     - python@3.10.8
@@ -28,11 +29,12 @@ lint:
     - hadolint # Causing daemon stability issues
   enabled:
     # Core formatting and linting (lightweight)
+    - ktlint@1.6.0
     - eslint@9.29.0:
         config_path: eslint.config.js
     - markdownlint-cli2@0.18.1
     - biome@2.0.4
-    - prettier@3.5.3:
+    - prettier@3.6.0:
         include: ['**/*.html', '**/*.astro']
     - stylelint@16.21.0:
         include: ['**/*.{css,scss,sass}']
@@ -43,7 +45,7 @@ lint:
     - shellcheck@0.10.0
     - shfmt@3.6.0
     - yamllint@1.37.1
-    - renovate@41.1.3
+    - renovate@41.2.0
 
   ignore:
     - linters: [ALL]
