style: apply Biome formatting and fix configuration
- Fixed empty example.markdownlint-cli2.jsonc file
- Applied Biome formatting to all TypeScript, JavaScript, and JSON files
- Migrated biome.json to latest schema version 2.0.6
- Converted multi-line arrays to single-line format for consistency

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,18 +18,7 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": [
-        "ms-vscode.vscode-typescript-next",
-        "bradlc.vscode-tailwindcss",
-        "esbenp.prettier-vscode",
-        "ms-playwright.playwright",
-        "ms-vscode.vscode-json",
-        "redhat.vscode-yaml",
-        "ms-vscode.vscode-eslint",
-        "nrwl.angular-console",
-        "ms-vscode-remote.remote-containers",
-        "ms-azuretools.vscode-docker"
-      ],
+      "extensions": ["ms-vscode.vscode-typescript-next", "bradlc.vscode-tailwindcss", "esbenp.prettier-vscode", "ms-playwright.playwright", "ms-vscode.vscode-json", "redhat.vscode-yaml", "ms-vscode.vscode-eslint", "nrwl.angular-console", "ms-vscode-remote.remote-containers", "ms-azuretools.vscode-docker"],
       "settings": {
         "typescript.preferences.preferTypeOnlyAutoImports": true,
         "editor.formatOnSave": true,
