--- a/project.json
+++ b/project.json
@@ -72,13 +72,7 @@
     "lint": {
       "executor": "@nx/eslint:lint",
       "options": {
-        "lintFilePatterns": [
-          "*.{js,ts,mjs,cjs}",
-          "tools/**/*.{js,ts,mjs,cjs}",
-          "scripts/**/*.{js,ts,mjs,cjs}",
-          "apps/**/*.{js,ts,tsx,jsx}",
-          "!packages/**/*"
-        ]
+        "lintFilePatterns": ["*.{js,ts,mjs,cjs}", "tools/**/*.{js,ts,mjs,cjs}", "scripts/**/*.{js,ts,mjs,cjs}", "apps/**/*.{js,ts,tsx,jsx}", "!packages/**/*"]
       }
     }
   },
