--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -5,7 +5,7 @@
       "line_length": 120,
       "headings": false,
       "code_blocks": false,
-      "tables": false,
+      "tables": false
     },
     "MD024": false,
     "MD033": false,
@@ -14,11 +14,11 @@
     "MD026": false,
     "MD037": false,
     "MD007": {
-      "indent": 2,
+      "indent": 2
     },
     "MD029": false,
     "MD010": {
-      "code_blocks": false,
-    },
-  },
+      "code_blocks": false
+    }
+  }
 }
