--- a/packages/design-system/project.json
+++ b/packages/design-system/project.json
@@ -139,11 +139,7 @@
     "clean": {
       "executor": "nx:run-commands",
       "options": {
-        "commands": [
-          "rm -rf dist",
-          "rm -rf storybook-static",
-          "node ../../tools/apple-cleaner.js ."
-        ],
+        "commands": ["rm -rf dist", "rm -rf storybook-static", "node ../../tools/apple-cleaner.js ."],
         "cwd": "packages/design-system",
         "parallel": false
       }
