chore(deps): update dependencies and improve gitignore
- Update storybook from 9.0.13 to 9.0.14
- Update eslint from 9.29.0 to 9.30.0
- Update prettier from 3.6.0 to 3.6.2
- Update various other dependencies via pnpm-lock.yaml
- Remove tmp/nx-cache/cloud/verify.lock from tracking
- Add explicit tmp/nx-cache/ ignore pattern
- Add package-lock.json and yarn.lock ignores
- Add editor swap file ignores

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ secrets.json
 .nx/workspace-data
 .nx/installation
 
+# Nx Cloud cache
+tmp/nx-cache/
+
 # Storybook
 storybook-static/
 chromatic-build/
@@ -172,6 +175,14 @@ temporary/
 .turbo/
 .vercel/
 .nitro/
+
+# Lock files for specific tools (keep pnpm-lock.yaml)
+package-lock.json
+yarn.lock
+
+# Editor swap files
+*.swp
+*.swo
 
 # Docker
 .docker/
