feat: implement full documentation/codebase parity
Complete implementation of features documented in USER_GUIDE.md and CONTROL_DOCUMENT.md:

✨ New Platform Apps:
- Scaffolded React Native mobile app with Nx integration
- Implemented Tauri desktop app with Rust backend
- Added token demo components for both platforms

🔧 Web App Enhancements:
- Complete Qwik City implementation with Cloudflare Pages adapter
- Token demo components with live design token integration
- Production-ready configuration and deployment setup

🎨 Design System & Tokens:
- Multi-platform Storybook configuration (web/mobile/desktop)
- Loki visual regression testing setup
- Enhanced token build pipeline with collision prevention

🤖 CI/CD & Automation:
- GitHub Actions workflows for visual tests, token sync, and export
- Apple cleanup automation with pre-commit hooks
- Token drift detection and monitoring scripts

📋 Project Management:
- Updated Nx workspace configuration for all platforms
- Comprehensive test setups (Jest/Vitest) across apps
- Enhanced package.json scripts for all documented workflows

📖 Documentation:
- Synchronized CONTROL_DOCUMENT.md with USER_GUIDE.md
- Fixed naming inconsistencies and technical accuracy
- Added comprehensive troubleshooting and workflow sections

This commit closes the gap between documentation and implementation,
ensuring all documented features are functional and deployable.

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -29,6 +29,10 @@ lint:
     - hadolint # Causing daemon stability issues
   enabled:
     # Core formatting and linting (lightweight)
+    - clippy@1.65.0
+    - rustfmt@1.65.0
+    - svgo@4.0.0
+    - taplo@0.9.3
     - ktlint@1.6.0
     - eslint@9.30.0:
         config_path: eslint.config.js
