--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "pnpm": ">=9.0.0"
   },
   "scripts": {
-    "build": "nx run-many -t build",
-    "build:affected": "nx affected -t build",
+    "build": "nx run-many -t build && pnpm run postbuild:clean",
+    "build:affected": "nx affected -t build && pnpm run postbuild:clean",
+    "postbuild:clean": "pnpm run clean:apple",
     "test": "nx run-many -t test",
     "test:affected": "nx affected -t test",
     "lint:packages": "nx run-many -t lint -p design-tokens,design-system,shared-utils",
@@ -64,6 +65,10 @@
     "tokens:sync-all": "nx run design-tokens:tokens:sync && nx run-many -t build --skip-nx-cache",
     "tokens:watch": "nx run design-tokens:watch",
     "tokens:validate": "node -e \"const { runTokenContractValidation } = require('./packages/shared-utils/dist/token-contract-validation.js'); runTokenContractValidation();\"",
+    "tokens:check-drift": "echo '🔍 Checking for token drift...' && echo 'Drift check placeholder - would compare with Penpot'",
+    "tokens:diff": "echo '📊 Token diff placeholder - would show changes between versions'",
+    "tokens:monitor": "echo '👀 Token monitoring placeholder - would start continuous monitoring'",
+    "penpot-export": "cd tools/penpot-export && ./export-tokens.sh",
     "validate:token-contract": "pnpm tokens:validate",
     "validate:penpot-export": "node -e \"console.log('🔍 Validating Penpot export...'); if (!require('fs').existsSync('tokens.json')) { console.log('❌ tokens.json not found'); process.exit(1); } console.log('✅ Penpot export validated');\"",
     "dev:full-stack": "concurrently 'nx run design-tokens:watch' 'nx run design-system:storybook'",
@@ -166,6 +171,8 @@
     ]
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.17.4",
+    "@vanilla-extract/vite-plugin": "^5.1.0",
     "storybook": "9.0.14"
   }
 }
